# voice-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Voice AI Agent Coding Challenge (1).md  compose.yaml  pyproject.toml
app/: config.py  database.py  errors.py  main.py
app/patients/: model.py  repository.py  routes.py  schemas.py  service.py  validators.py
app/voice/: prompt.py  routes.py
config/: retell-register-patient.schema.json
tests/: conftest.py  test_patient_api.py  test_voice_webhook.py
